--- a/compose.yaml
+++ b/compose.yaml
@@ -7,33 +7,35 @@ services:
     environment:
       - KAFKA_CFG_NODE_ID=0
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      # - KAFKA_CFG_CONTROLLER_QUORUM_BOOTSTRAP_SERVERS=localhost:9093
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@localhost:9093
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+    networks:
+      - app-network
 
   spark-master:
     image: bitnami/spark:3.5.5
     container_name: spark-master
     ports:
-      - 7077:7077  # Spark master port
-      - 8080:8080  # Spark web UI
+      - 7077:7077
+      - 8080:8080
       - 4040:4040
     volumes:
-      - ./spark:/opt/spark-app     # mount for Spark scripts
-      # - ./data:/data                   # mount for input data
+      - ./spark:/opt/spark-app
     environment:
       - SPARK_MODE=master
     depends_on:
       - kafka
+    networks:
+      - app-network
 
   spark-worker:
     image: bitnami/spark:latest
     container_name: spark-worker
     ports:
-      - 8081:8081  # Spark worker web UI
+      - 8081:8081
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark-master:7077
@@ -41,6 +43,8 @@ services:
       - SPARK_WORKER_CORES=1
     depends_on:
       - spark-master
+    networks:
+      - app-network
 
   postgres:
     image: postgres:17
@@ -53,6 +57,12 @@ services:
       - POSTGRES_PASSWORD=postgres
     depends_on:
       - spark-worker
+    networks:
+      - app-network
 
 volumes:
   pgdata:
+
+networks:
+  app-network:
+    driver: bridge
