--- a/compose.yaml
+++ b/compose.yaml
@@ -20,7 +20,7 @@ services:
     container_name: spark-master
     ports:
       - 7077:7077
-      - 8080:8080
+      - 8085:8080
       - 4040:4040
     volumes:
       - ./spark:/opt/spark-app
@@ -46,19 +46,42 @@ services:
     networks:
       - app-network
 
-  postgres:
-    image: postgres:17
-    container_name: postgres_container
-    ports:
-      - 5432:5432
+  metabase:
+    image: metabase/metabase:latest
+    container_name: metabase
+    hostname: metabase
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - /dev/urandom:/dev/random:ro
+    ports:
+      - 3000:3000
     environment:
-      - POSTGRES_PASSWORD=postgres
-    depends_on:
-      - spark-worker
+      MB_DB_TYPE: postgres
+      MB_DB_DBNAME: metabase
+      MB_DB_PORT: 5432
+      MB_DB_USER: admin 
+      MB_DB_PASS: admin
+      MB_DB_HOST: postgres
     networks:
       - app-network
+    healthcheck:
+      test: curl --fail -I http://localhost:3000/api/health || exit 1
+      interval: 15s
+      timeout: 5s
+      retries: 5
+
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    hostname: postgres
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_DB: metabase
+      POSTGRES_PASSWORD: admin
+    networks:
+      - app-network
+
 
 volumes:
   pgdata:
